# emotion-detection

./: README.md  audio_wav2vec.py  docker-compose.yml  extract_audio.py  extract_video.py  extract_video_emotion.py  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml  worker.py
backend/src/: config.py  emotion_detection.py  file_processing.py  minio.py  mongodb.py  preprocessing.py  schemas.py  short.py  tasks.py  transcript.py
backend/src/analysis/: audio_emotion.py  emo_llama.py  face_emotion.py  gpt2.py  openai.py  pipelines.py  prompt.py  prompt_gpt2.py  short.py  transcript.py
backend/src/api/: config.py  constants.py  exceptions.py  schemas.py
docs/: emollama-response.md  gpt2-response.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  types.ts  types.tsx
frontend/src/components/videos/: addVideo.tsx  columns.tsx  dataTable.tsx  openAIDialog.tsx  page.tsx  transcriptDialog.tsx
src/: constants.py  transcript.py
