[project]
name = "emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "facenet-pytorch>=2.5.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
