[project]
name = "emotion-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "boto3>=1.38.46",
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "hf-xet>=1.1.5",
    "ipython>=9.3.0",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "pymongo>=4.13.2",
    "rq>=2.4.0",
    "ruff>=0.11.12",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
